feat: add go validator
